--- a/tribute.css
+++ b/tribute.css
@@ -1,71 +1,90 @@
 body{
   background-color:#ffebe6;
 }
-  #title{
-    text-align:center;
-    font-family:georgia,sarif;
-    text-decoration:underline;
-    
-  }
-  
-  #heading{
-    text-align:center;
-    font-family:Lucida Sans Unicode;
-  }
-  #img-div{
-    max-width:70vw;
-    display:block;
-    margin-left:auto;
-    margin-right:auto;
-    background-color:white;
-    padding-top:2.8vw;
-    padding-bottom:2vw;
-  }
-  #image{
-    display:block;
-    width:60vw;
-    margin-left:auto;
-    margin-right:auto;
-    max-width:100%;
-  }
-  
+#title{
+  text-align:center;
+  font-family:georgia,sarif;
+  font-size: 4vw;
+}
+
+#heading{
+  text-align:center;
+  font-family:Lucida Sans Unicode;
+  font-size: 2vw;
+}
+
+#img-div{
+  max-width:70vw;
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+  background-color:white;
+  padding-top:2.8vw;
+  padding-bottom:1vw;
+}
+
+#image{
+  display:block;
+  width:60vw;
+  margin-left:auto;
+  margin-right:auto;
+  max-width:100%;
+}
+
+#img-caption{
+  text-align:center;
+  font-size: 1.2vw;
+}
+
+#timeline{
+  text-align:center;
+  font-family:cursive;
+  font-size: 1.6vw;
+}
+
+#list{
+  margin-left:30vw;
+  width:40vw;
+}
+
+#blockquote{
+  width:40vw;
+  margin-left:30vw;
+}
+
+#link-heading{
+  text-align:center;
+  font-family:cursive;
+  margin-bottom:2vw;
+  font-size: 1.6vw;
+}
+
+#tribute-link{
+  text-decoration:none;
+}
+
+.para{
+  font-family:Lucida Calligraphy;
+  font-size: 17px;
+}
+
+li{
+  font-family:Lucida Fax;
+  font-size: 17px;
+}
+
+footer{
+  text-align:right;
+  font-family:Lucida Handwriting;
+  font-size: 1.2vw;
+}
+
+@media(max-width:525px){
   #img-caption{
-    text-align:center;
+    font-size: 14px;
   }
-  
-  #timeline{
-    text-align:center;
-    font-family:cursive;
-  }
-  #list{
-   margin-left:30vw;
-    width:40vw;
-  }
-  #blockquote{
-    width:40vw;
-    margin-left:30vw;
-  }
-  #para{
-    
-  }
-  #link-heading{
-    text-align:center;
-    font-family:cursive;
-    margin-bottom:2vw;
-  }
-  #tribute-link{
-    text-decoration:none;
-  }
-  
-  .para{
-    font-family:Lucida Calligraphy;
-  }
-  
-  li{
-    font-family:Lucida Fax;
-  }
-  
+
   footer{
-    text-align:right;
-    font-family:Lucida Handwriting;
+    font-size: 14px;
   }
+}
